crates/polychem/src/atoms/snapshots/polychem__atoms__atomic_database__tests__decimal_lack_of_precision.snap
---
source: crates/polychem/src/atoms/atomic_database.rs
description: res
expression: out
---
  × error parsing KDL

Error: 
  × an error occured during scalar conversion
  ╰─▶   × Scale exceeds the maximum precision allowed: 42 > 28
      
   ╭─[test:1:10]
 1 │ lossless 1e-42
   ·          ──┬──
   ·            ╰── invalid value
   ╰────
